resolveImage  function added to all images test covered

--- a/src/components/Templates/Diptych/Diptych.scss
+++ b/src/components/Templates/Diptych/Diptych.scss
@@ -178,6 +178,7 @@
     bottom: 0;
     right: 0;
     height: 12em;
+    border-bottom-right-radius: 1em;
   }
 }
 @media only screen and (min-width: 481px) {
@@ -202,6 +203,7 @@
     bottom: 0;
     right: 0;
     height: 14em;
+    border-bottom-right-radius: 1em;
   }
   .qui .qui-diptych-card {
     .qui-clickable-image {
